--- a/www/css/style.css
+++ b/www/css/style.css
@@ -71,36 +71,38 @@
 }
 */
 
-/* tab-collection
-.wrapper {
-  position: relative;
-  width: 400px;
-  height: 200px;
-  display: block;
+/* tab-collection */
+.item-container{
   margin-left: auto;
   margin-right: auto;
-  border-radius: 50%;
-  border-radius: 150px;
-  -webkit-border-radius: 150px;
-  -moz-border-radius: 150px;
+  z-index: 0;
+  width: 220px;
+  height: 220px;
 }
-.wrapper > .bar, .wrapper > img {
+.progress-circle{
   position: absolute;
-  top: 0;
-  left: 0;
+  z-index: 1;
+}
+.img-wrapper {
+  z-index: 2;
+  width: 200px;
+  height: 200px;
+  margin-top: 10px;
+  margin-left: 10px;
+  position: absolute;
+  overflow: hidden;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.img-wrapper-img {
+  display: inline;
+  margin: 0 auto;
+  height: auto;
   width: 100%;
-  height: 100%;
-  / Needs appropriate vendor prefixes /
-  box-sizing: border-box;
-  / This needs to be equal to strokeWidth/
-  padding: 4%;
+  position: relative;
+  bottom: 50%;
 }
-
-.circle {
-  width: 300px;
-	height: 300px;
-}
-*/
 .fullscreenimage{
   width: 100%;
   height: auto;
